tests/integration/errors/occurs/field/main.cx
fun f(x) {
  x.x = x
}
fun main() {
}
